--- a/config/database.yml
+++ b/config/database.yml
@@ -16,18 +16,13 @@
 #
 default: &default
   adapter: postgresql
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  # encoding: unicode
-  timeout: 5000
-  host: localhost
-  username: rails_products_api
-  password: <%= ENV['RAILS_PRODUCTS_API_DATABASE_PASSWORD'] %>
+  encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  adapter: postgresql
   database: rails_products_api_development
 
   # The specified database role being used to connect to postgres.
@@ -62,7 +57,6 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  adapter: postgresql
   database: rails_products_api_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
@@ -86,7 +80,6 @@ test:
 #
 production:
   <<: *default
-  adapter: postgresql
   database: rails_products_api_production
-  # username: rails_products_api
-  # password: <%= ENV['RAILS_PRODUCTS_API_DATABASE_PASSWORD'] %>
+  username: rails_products_api
+  password: <%= ENV['RAILS_PRODUCTS_API_DATABASE_PASSWORD'] %>
