--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   "devDependencies": {},
   "scripts": {
     "build": "cd client && npm install && npm run build && cd ..",
-    "deploy": "cp a client/build/ . public/",
-    "postinstall": "npm run build && npm run deploy && echo 'client built'"
+    "deploy": "cp -a client/build/. public/",
+    "postinstall": "npm run build && npm run deploy && echo 'Client built!'"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/niecey0123/bike-rental-app.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
