--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "directories": {
     "lib": "lib"
   },
+  "engines": {
+    "node": "11.15.1"
+  },
   "dependencies": {
     "axios": "^0.19.0"
   },
