--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "rails_products_api",
-  "version": "1.0.0",
+  "engines": {
+    "node": "11.15.0"
+  },
   "scripts": {
     "build": "cd client && npm install && npm run build && cd ..",
     "deploy": "cp -a client/build/. public/",
